@@ -45,6 +45,11 @@ Required Python versions by pyparsing version
 
 Version 3.2.4 - under development
 ---------------------------------
+- Fixed bug when using a copy of a Word expression (either by using the explicit
+  copy() method, or attaching a results name), and setting a new expression name,
+  a raised ParseException still used the original expression name. Reported by
+  Waqas Ilyas, in Issue #612 - good catch!
+
 - Fixed type annotation for `replace_with`, to accept `Any` type. Fixes Issue #602,
   reported by esquonk.
 
